invalid_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: non-shire-app
spec:
  containers:
  - image: busybox
    name: on-shire-app
