manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gandalf
  namespace: default
  labels:
    name: gandalf
spec:
  ports:
  - name: webhook
    port: 443
    targetPort: 8080
  selector:
    name: gandalf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gandalf
  namespace: default
  labels:
    name: gandalf
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gandalf
  template:
    metadata:
      name: gandalf
      labels:
        name: gandalf
    spec:
      containers:
        - name: webhook
          image: djmutua/doxmt:latest
          imagePullPolicy: Always
          args:
            - -alsologtostderr
            - --log_dir=/
            - -v=10
            - 2>&1
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 00Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
            - name: logs
              mountPath: /tmp
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: gandalf
        - name: logs
          emptyDir: {}
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: pods
webhooks:
  - name: pods.isaaguilar.local
    clientConfig:
      service:
        name: gandalf
        namespace: default
        path: "/validate"
      caBundle:
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
