webhook_other.yml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: pods
webhooks:
  - name: pods.isaaguilar.local
    namespaceSelector:
      matchExpressions:
        - key: environment
          operator: In
          values:
            - prod
            - staging
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    failurePolicy: Fail
    clientConfig:
      service:
        name: admissions-webhook
        namespace: admissions
        path:  "/api/v1/validate/pod/readiness"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVERENDQXZRQ0NRQ1BUWjFjQUZWYjdUQU5CZ2txaGtpRzl3MEJBUTBGQURDQnh6RUxNQWtHQTFVRUJoTUMKUkVVeEVEQU9CZ05WQkFnTUIwTnZiRzluYm1VeEVEQU9CZ05WQkFjTUIwTnZiRzluYm1VeER6QU5CZ05WQkJFTQpCalF5TkRJME1qRVVNQklHQTFVRUNRd0xTR0ZzYkc4Z0lERTJNakV4RXpBUkJnTlZCQW9NQ21kcFlXNTBjM2RoCmNtMHhHVEFYQmdOVkJBc01FRVZ0YjJwNUlFUmxjR0Z5ZEcxbGJuUXhGakFVQmdOVkJBTU1EV2RwWVc1MGMzZGgKY20wdWFXOHhKVEFqQmdrcWhraUc5dzBCQ1FFV0ZtNXZMWEpsY0d4NVFHZHBZVzUwYzNkaGNtMHVhVzh3SGhjTgpNVGd4TURFNU1 [...]
  - name: template-pod-readiness.isaaguilar.local
    namespaceSelector:
      matchExpressions:
        - key: environment
          operator: In
          values:
            - prod
            - staging
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
          - daemonsets
          - jobs
          - podtemplates
          - replicasets
          - replicationcontrollers
          - statefulsets
    failurePolicy: Fail
    clientConfig:
      service:
        name: admissions-webhook
        namespace: admissions
        path:  "/api/v1/validate/podtemplate/pod-readiness"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVERENDQXZRQ0NRQ1BUWjFjQUZWYjdUQU5CZ2txaGtpRzl3MEJBUTBGQURDQnh6RUxNQWtHQTFVRUJoTUMKUkVVeEVEQU9CZ05WQkFnTUIwTnZiRzluYm1VeEVEQU9CZ05WQkFjTUIwTnZiRzluYm1VeER6QU5CZ05WQkJFTQpCalF5TkRJME1qRVVNQklHQTFVRUNRd0xTR0ZzYkc4Z0lERTJNakV4RXpBUkJnTlZCQW9NQ21kcFlXNTBjM2RoCmNtMHhHVEFYQmdOVkJBc01FRVZ0YjJwNUlFUmxjR0Z5ZEcxbGJuUXhGakFVQmdOVkJBTU1EV2RwWVc1MGMzZGgKY20wdWFXOHhKVEFqQmdrcWhraUc5dzBCQ1FFV0ZtNXZMWEpsY0d4NVFHZHBZVzUwYzNkaGNtMHVhVzh3SGhjTgpNVGd4TURFNU1 [...]
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: namespaces
webhooks:
  - name: namespaces.isaaguilar.local
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - namespaces
    failurePolicy: Fail
    clientConfig:
      service:
        name: admissions-webhook
        namespace: admissions
        path:  "/api/v1/validate/namespace/labels"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVERENDQXZRQ0NRQ1BUWjFjQUZWYjdUQU5CZ2txaGtpRzl3MEJBUTBGQURDQnh6RUxNQWtHQTFVRUJoTUMKUkVVeEVEQU9CZ05WQkFnTUIwTnZiRzluYm1VeEVEQU9CZ05WQkFjTUIwTnZiRzluYm1VeER6QU5CZ05WQkJFTQpCalF5TkRJME1qRVVNQklHQTFVRUNRd0xTR0ZzYkc4Z0lERTJNakV4RXpBUkJnTlZCQW9NQ21kcFlXNTBjM2RoCmNtMHhHVEFYQmdOVkJBc01FRVZ0YjJwNUlFUmxjR0Z5ZEcxbGJuUXhGakFVQmdOVkJBTU1EV2RwWVc1MGMzZGgKY20wdWFXOHhKVEFqQmdrcWhraUc5dzBCQ1FFV0ZtNXZMWEpsY0d4NVFHZHBZVzUwYzNkaGNtMHVhVzh3SGhjTgpNVGd4TURFNU1 [...]
